Default configuration update

--- a/src/main/resources/config/homeserver-default.cfg
+++ b/src/main/resources/config/homeserver-default.cfg
@@ -1,11 +1,12 @@
 #
-#Sun Sep 18 23:47:02 CEST 2016
+#Wed Sep 21 09:10:30 CEST 2016
 MPD_HOST=
 MPD_PASSWORD=
 MPD_PORT=
 NET_HTTP_PORT=80
 NET_PASSWORD=
 NET_USERNAME=
+PROTECTED_PASSCODE=1234
 SERVER_NAME=YourHome Server
 SMS_KEY=
 SMS_PASSWORD=
@@ -17,7 +18,7 @@ SMTP_SENDER=
 SMTP_USER=
 SUNSET_LAT=50.8503
 SUNSET_LONG=4.3517
-THERMOSTAT_PASSWORD=Oorkonde152003
-THERMOSTAT_USERNAME=johancosemans@gmail.com
+THERMOSTAT_PASSWORD=
+THERMOSTAT_USERNAME=
 ZWAVE_COM=
 ZWAVE_KEY=
