Added door sensor images

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-#Mon Sep 19 09:18:19 CEST 2016
+#Sun Nov 20 09:06:12 CET 2016
 //version=Properties 
-artifactBuildNumber=348
 artifactMajorVersion=0.9
+artifactBuildNumber=441
