Activate YourHome scenes by voice commands through Amazon Echo

--- a/amazon-alexa/build.gradle
+++ b/amazon-alexa/build.gradle
@@ -13,7 +13,10 @@ dependencies {
     compile (
         'com.amazonaws:aws-lambda-java-core:1.1.0',
         'com.amazonaws:aws-lambda-java-events:1.1.0',
-        'com.amazon.alexa:alexa-skills-kit:1.2'
+        'com.amazon.alexa:alexa-skills-kit:1.2',
+        'com.amazonaws:aws-lambda-java-log4j:1.0.0',
+        'org.slf4j:slf4j-log4j12:1.7.10',
+        'org.apache.httpcomponents:httpclient:4.5.2'
     )
 }
 
