--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ buildscript {
     maven { url 'https://plugins.gradle.org/m2/' }
   }
   dependencies {
-    classpath 'gradle.plugin.de.fuerstenau:BuildConfigPlugin:1.1.0'
+    classpath 'gradle.plugin.de.fuerstenau:BuildConfigPlugin:1.1.7'
   }
 }
-println "Using JDK version (Must be JDK 1.8): "+System.getProperty("java.home")
+println "Using JDK version (Must be JDK 1.8 or higher): "+System.getProperty("java.home")
 apply plugin: "java"
 apply plugin: "eclipse"
 apply plugin: 'de.fuerstenau.buildconfig'
@@ -64,15 +64,19 @@ configurations.all {
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 dependencies {
-   compile ('com.github.JohanCosemans:YourHomeCommon:master-SNAPSHOT') { 
+
+   /*compile ('com.github.JohanCosemans:YourHomeCommon:master-SNAPSHOT') {
    	changing = true 
-   }
+   }*/
+   
+   compile project(":YourHomeCommon")
+   // Local jar files
    compile name: "sqlite-jdbc-3.8.7.2"
    compile name: "tritonus_share-0.3.6"
-   //compile name: "zwave4j-0.3-SNAPSHOT"
    compile name: "zwave4j-1.0-SNAPSHOT"
    compile name: "huelocalsdk"
    compile name: "huesdkresources"
+   // Remote dependencies
    compile "log4j:log4j:1.2.17"
    compile "org.slf4j:slf4j-log4j12:1.7.13"
    compile "com.nexmo:nexmo-java-sdk:1.2"
