--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-#Mon Mar 20 17:23:34 CET 2017
+#Sun May 14 14:29:32 CEST 2017
 //version=Properties 
-artifactBuildNumber=552
+artifactBuildNumber=584
 artifactMajorVersion=0.9
