--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-#Wed Jul 12 10:54:06 CEST 2017
+#Mon Jan 15 18:42:28 CET 2018
 //version=Properties 
-artifactBuildNumber=592
+artifactBuildNumber=596
 artifactMajorVersion=0.9
