--- a/amazon-alexa/build.gradle
+++ b/amazon-alexa/build.gradle
@@ -20,7 +20,8 @@ dependencies {
         'com.amazon.alexa:alexa-skills-kit:1.2',
         'com.amazonaws:aws-lambda-java-log4j:1.0.0',
         'org.slf4j:slf4j-log4j12:1.7.10',
-        'org.apache.httpcomponents:httpclient:4.5.2'
+        'org.apache.httpcomponents:httpclient:4.5.2',
+        'com.mashape.unirest:unirest-java:1.4.9'
     )
 }
 
